--- a/styles.css
+++ b/styles.css
@@ -545,24 +545,22 @@ form textarea {
 
 .menu-modal{
     background-color: black;
-    z-index: 99;
     position: absolute;
     visibility: hidden;
     opacity: 0;
-    transition: all 300ms ease-in;
-    
-  
-}
-
-
-
-.menu-modal.visible {
-    visibility: visible;
-    opacity: 1;
+    z-index: 99;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    transition: all 300ms ease-in;
+    transform: scale(0.01);
+}
+
+.menu-modal.visible {
+    visibility: visible;
+    opacity: 1;
+    transform: none;
 }
 
 .close {
