--- a/styles.css
+++ b/styles.css
@@ -545,16 +545,17 @@ form textarea {
 
 .menu-modal{
     background-color: black;
-    position: absolute;
+    position: fixed;
     visibility: hidden;
     opacity: 0;
-    z-index: 99;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     transition: all 300ms ease-in;
-    transform: scale(0.01);
+    transform: translateY(100%);
+    color: #000000;
+    z-index: 99;
 }
 
 .menu-modal.visible {
